fix overflow

--- a/styles/components/NavPath.module.sass
+++ b/styles/components/NavPath.module.sass
@@ -3,6 +3,8 @@
 .nav
   display: flex
   position: sticky
+  overflow-y: hidden
+  overflow-x: auto
   background-color: darken($black, 2%)
   box-shadow: 0 3px 5px 5px darken($black, 3%)
   font-weight: bolder
